Version 2.1.1.7
=================
Added TSFileSink (multi file transport stream writer)
Added MultiFileReader for .tsbuffer files (duration updates don't work yet)

Version 2.1.1.6
=================
Fixed a problem in the parser code that was causing false detection of A/V pids when in program Pin Mode.
Fixed a problem with the CAMThread causing a lockup when the input file did not exist. Fixed the problem with the application task not ending after the above condition.
Added a dummy IAsyncReader Interface to allow the MS Demux to parse the data in the file when the Demux control option is inactive.(Program Pin Mode Only)
Added some changes to the PidParser code to allow for other country TS standards.(France)
Changed the media subtype for H264 video mediatype so it wll play H264 streams.(France)
Added some code to the FileReader class to do timeshifting, development only, using the FileWriter (TimeShift) Filter.



Version 2.1.1.5
=================
Fixed a problem where the IMPEG2StreamIdMap pids were not being cleared when changing streams.(re mpg files)
Fixed the AC3 Audio playback issue with mpg files. Had to add the stream offset values.

Version 2.1.1.4
=================
Made some changes to the main destructor method so that all class destructors were used.
Made some changes to the Breakconnect functon so that the pin could be reconnected to the Demux's.
Added some helper code to delete any Demux output pins if the TSfileSource filter was disconnected.
Fixed a bug in the GetDuration code that was causing issues with getting the pcr.
Added some simple code to allow the filter to operate as a push source for mpg files, It changes the output pin to MPEG2 Program mode and controls the MS Demux using the IMPEG2StreamIdMap Interface.  
(Note: Does not seem to work well with AC3 streams but plays MPEG2 audio ok.)

Version 2.1.1.3
=================